--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,3 +1,39 @@
+<!-- Footer Begins Here -->
+<footer class="footer" id="footerid">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-12 ">
+        <h1 class="text-capitalize">aboutUs</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rerum reiciendis, corrupti vel enim
+          doloremque maxime recusandae deleniti, autem reprehenderit laudantium praesentium ducimus blanditiis
+          repudiandae. Quidem quos ex ipsam ipsum?</p>
+      </div>
+      <div class="col-lg-4 col-md-6 col-12 text-center links">
+        <h1 class="text-capitalize">navLinks</h1>
+        <li><a href="#"> Home </a></li>
+        <li><a href="#bengaliid"> Bengali </a></li>
+        <li><a href="#hindiid"> Hindi </a></li>
+        <li><a href="#englishid"> English </a></li>
+      </div>
+      <div class="col-lg-4 col-md-12 col-12 ">
+        <h1>Newsletter</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque pariatur, similique neque eaque ullam eum
+          doloremque, ipsa ex deleniti nihil fugit! Nesciunt molestias et ab quasi magnam voluptas modi facilis.</p>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control newsinput" placeholder="Your Email"
+            aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <a href=""><span class="input-group-text" id="basic-addon2">Send</span></a>
+          </div>
+        </div>
+        </div>
+      </div>
+    <div class="scrolltop float-right">
+      <i class="fa fa-arrow-up" onclick="topFunction()" id="myBtn"></i>
+    </div>
+  </div>
+</footer>
+<!-- Footer Ends Here -->
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -24,6 +60,7 @@
     else {
       button.style.display = 'none';
     }
+
   }
   function topFunction() {
     document.body.scrollTop = 0;
