--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -39,11 +39,13 @@ p {
 	z-index: 1;
 }
 .header::before {
+	content: '';
 	position: absolute;
 	top: 0%;
 	bottom: 0%;
 	left: 0;
 	right: 0;
+	z-index: -2;
 	background: #43cea2;
 	/* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #185a9d, #43cea2);
@@ -52,7 +54,7 @@ p {
 	opacity: .2;
 }
 .nav-item a {
-	color: #fff;
+	color: #fff !important;
 	font-size: 1.3rem;
 }
 .nav-item a:hover {
@@ -61,7 +63,6 @@ p {
 }
 .navbar-brand {
 	font-size: 2.6rem;
-	margin-left: 30px;
 }
 .navbar::before {
 	content: "";
@@ -78,7 +79,14 @@ p {
 		#42275a
 	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	opacity: .4;
-	z-index: -1;
+	z-index: -2;
+}
+.header-section {
+	width: 100%;
+	height: inherit;
+	color: #fff;
+	text-align: center;
+	position: relative !important;
 }
 .center-div {
 	width: 100%;
@@ -87,13 +95,15 @@ p {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
 }
 .center-div h1 {
 	text-transform: uppercase;
 	font-size: 4.2rem;
 	font-weight: 800;
 	letter-spacing: 3px;
-	line-height: 1px;
+	/* line-height: 1px; */
 	margin: 70px auto;
 }
 .center-div p {
@@ -113,6 +123,10 @@ p {
 	text-transform: capitalize;
 	margin: 0 40px;
 	font-size: 1.7rem;
+	outline: none;
+	font-weight: 400;
+	line-height: 1.4;
+	text-align: center;
 }
 .fa-superpowers {
 	color: #eb3b5a;
@@ -197,21 +211,14 @@ p {
 	transition: 0.4s ease;
 	margin-bottom: 90px;
 	height: auto;
+	min-height: 15vh;
 	width: 100%;
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 	border-radius: 25px;
 }
-.show-button {
-	border-radius: 35px;
-	padding: 12px 20px;
-	margin: 40px auto;
-	text-align: justify;
-	font-size: 1.5rem;
-	background-color: darkmagenta;
-	color: #fff;
-	display: none;
-	text-transform: capitalize;
-	border: 3px solid #606060;
+.movie-link {
+	text-decoration: none;
+	color: #202020 !important;
 }
 .card-show {
 	height: 20vh;
@@ -245,7 +252,20 @@ p {
 	color: red;
 	padding-right: 1%;
 	/* ALL HINDI , ENGLISH & BENGALI ENDS HERE */
-	/* THE SHOW PAGE SECTION STARTS HERE */
+}
+/* THE SHOW PAGE SECTION STARTS HERE */
+.header-show {
+	background-color: #fff;
+	height: 100vh;
+	position: relative;
+	margin-top: 120px;
+	margin-bottom: 0px;
+}
+.table-show {
+	height: auto;
+	margin-top: 100px;
+	margin-bottom: 0;
+	padding: 0;
 }
 .fa-anchor {
 	margin-left: 9px;
@@ -263,6 +283,7 @@ p {
 	border: 2px solid burlywood;
 	padding: 20px 15px;
 	margin-bottom: 20px;
+	position: relative;
 }
 .torrent-prov p,
 h4 {
@@ -295,9 +316,10 @@ h4 {
 }
 .card:hover,
 .card:hover .show-button {
-	transform: translateY(-20%);
+	transform: translateY(-10%);
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.8);
 	display: block;
+	transition: all 0.9s ease;
 }
 .bollywood-heading h1 {
 	color: #fff;
@@ -320,6 +342,11 @@ h4 {
 	border-radius: 10px;
 	color: #fff;
 	font-size: 1.6rem;
+}
+#myBtn:hover {
+	background-color: #202020;
+	color: #fff;
+	transition: 0.2s;
 }
 /* search bar om homepage starts here */
 .search-input {
@@ -352,9 +379,14 @@ h4 {
 /* Results Page Section Starts Here */
 .table td {
 	font-size: 1.2rem !important;
+	background-color: #fff;
 }
 .table td a {
-	color: #4b7bec;
+	color: #1b262c;
+}
+.table td a:hover {
+	color: #1b262c;
+	text-decoration: underline;
 }
 .table th {
 	font-size: 1.4rem;
@@ -362,16 +394,126 @@ h4 {
 	font-weight: 600;
 	text-align: left;
 	color: #202020;
-	text-shadow: 0 4px 5px darkgray;
+	color: #fff;
+	background-color: #6c567b;
 }
 /* Results Page Section Ends Here */
-@media (max-width: 768px) {
+/* Footer style starts starts here */
+.footer {
+	height: auto;
+	width: 100%;
+	background-color: #860bf3;
+	color: #fff;
+	padding: 40px 0;
+	position: relative;
+}
+.footer p {
+	color: #fff;
+	font-size: 0.9rem !important;
+}
+.footer a {
+	text-decoration: none;
+	font-weight: 500;
+	text-transform: capitalize;
+	line-height: 1.8;
+	color: #fff;
+}
+.footer h1 {
+	letter-spacing: 3px;
+	font-weight: 600;
+	font-size: 2.3rem !important;
+	margin-bottom: 25px;
+	text-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+}
+.links {
+	margin-bottom: 30px !important;
+}
+.newsinput {
+	height: 60px;
+	border-radius: 100px 0px 0px 100px !important;
+	min-width: 150px;
+	min-height: 45px;
+}
+.input-group-text {
+	color: #fff;
+	background: #ffa41b;
+	border-radius: 0 100px 100px 0 !important;
+	min-width: 120px;
+	min-height: 60px;
+	font-size: 1.2rem;
+}
+/* Footer style starts Ends here */
+@media (max-width: 992px) {
+	.links {
+		text-align: left !important;
+	}
+	.card-show {
+		width: 100%;
+		height: auto;
+	}
+	.header-show {
+		margin: 83px auto;
+	}
+	.card-show .card-title {
+		font-size: 1.0rem !important;
+	}
+	.footer h1 {
+		font-size: 1.8rem !important;
+	}
+	.footer p {
+		font-size: 0.9rem !important;
+	}
+	.card-show .card-text li,
+	.second-box .fa-magnet,
+	.second-box .download {
+		font-size: 0.9rem;
+	}
+	.second-box #problem,
+	.torrent-prov p {
+		font-size: 0.7rem;
+	}
+	.visit {
+		display: none;
+	}
+	.search-input {
+		width: 310px !important;
+		padding: 21px 19px;
+		margin: 0 auto;
+	}
+	.search-btn {
+		top: 40%;
+		left: 70%;
+		padding: 17px 10px;
+		width: 29%;
+		margin: 0 auto;
+	}
 	.center-div h1 {
-		font-size: 1.1rem;
+		font-size: 65px;
+		margin: 0 auto;
 	}
 	.header-button a {
 		padding: 20px 16px;
 		font-size: 1.4rem;
-		margin: 16px 2px;
+		margin: 16px auto;
+	}
+	.card {
+		width: 100%;
+		height: auto;
+	}
+	.hindi,
+	.english,
+	.bengali {
+		height: auto;
+	}
+	.navbar-brand {
+		font-size: 1.6rem;
+	}
+	.hindi h1,
+	.english h1,
+	.bengali h1 {
+		font-size: 29px;
+	}
+	.card-title {
+		font-size: 20px;
 	}
 }
