--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -20,7 +20,9 @@
     <h2 class="navbar-brand text-white" href="#"><span><i class="fa fa-superpowers"></i></span> Torrent-RUSH</h2>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">
+        <i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
+      </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
