--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,6 +1,6 @@
 <%-include("./partial/header") %>
-<div class="container header-show">
-    <table class="table table-striped table-hover table-responsive-sm table-responsive-md">
+<div class="container table-show">
+    <table class="table table-striped table-hover table-responsive">
         <thead>
             <tr>
                 <th scope="col">Name</th>
@@ -37,10 +37,6 @@
             <% } %>
         </tbody>
     </table>
-
-
-
-
 </div>
 
 <%-include("./partial/footer") %>
