change footer text

--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 col-12 ">
         <h1 class="text-capitalize">aboutUs</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rerum reiciendis, corrupti vel enim
-          doloremque maxime recusandae deleniti, autem reprehenderit laudantium praesentium ducimus blanditiis
-          repudiandae. Quidem quos ex ipsam ipsum?</p>
+        <p>This is a free Online Movie App which pulls data from the 1337x.Feel free to collaborate with us at the
+          respective github link.You can find any kind of Movie, TV Series , Anime here.Also visit our future apps
+          and have a nice Day.GoodBye.</p>
       </div>
       <div class="col-lg-4 col-md-6 col-12 text-center links">
         <h1 class="text-capitalize">navLinks</h1>
@@ -17,17 +17,18 @@
       </div>
       <div class="col-lg-4 col-md-12 col-12 ">
         <h1>Newsletter</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque pariatur, similique neque eaque ullam eum
-          doloremque, ipsa ex deleniti nihil fugit! Nesciunt molestias et ab quasi magnam voluptas modi facilis.</p>
+        <p>This is the very first stage of the app so it might contain some bugs but mostly its checked
+          throughly.Keep subscribed to our newsletter to get th latest hot updates of this and other apps.Thank You.</p>
         <div class="input-group mb-3">
-          <input type="text" class="form-control newsinput" placeholder="Your Email"
-            aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <input type="text" class="form-control newsinput" placeholder="Your Email" aria-label="Recipient's username"
+            aria-describedby="basic-addon2">
           <div class="input-group-append">
             <a href=""><span class="input-group-text" id="basic-addon2">Send</span></a>
           </div>
         </div>
-        </div>
       </div>
+    </div>
+    <p class="text-center">@copyright Lahiri-Techs 2020 </p>
     <div class="scrolltop float-right">
       <i class="fa fa-arrow-up" onclick="topFunction()" id="myBtn"></i>
     </div>
