--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -173,7 +173,8 @@ p {
 	padding: 50px 0;
 	background: #e96443;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #904e95, #e96443); /* Chrome 10-25, Safari 5.1-6 */
+	background: -webkit-linear-gradient(to right, #904e95, #e96443);
+	/* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(
 		490deg,
 		#eab543 45%,
@@ -294,7 +295,7 @@ h4 {
 }
 .card-title {
 	font-size: 1.5rem;
-	font-weight: 800;
+	font-weight: 600;
 	letter-spacing: 2px;
 	background-color: #fff;
 	padding: 12px 0;
