fixed result bug

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -34,6 +34,20 @@
 
             </tr>
             <%})} else {%>
+            <tr>
+                <td>
+                    <h1 class="my-5 text-center py-5">RESULT </h1>
+
+                </td>
+                <td>
+                    <h1 class="my-5 text-center py-5">NOT </h1>
+
+                </td>
+                <td>
+                    <h1 class="my-5 text-center py-5">FOUND</h1>
+
+                </td>
+            </tr>
             <% } %>
         </tbody>
     </table>
